--- a/style.css
+++ b/style.css
@@ -8,7 +8,15 @@
     h1 {
       margin-top: 20px;
     }
+input{
+  padding: 10px 20px;
+  margin: 20px auto;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
 
+  font-size: 16px;
+}
     button {
       padding: 10px 20px;
       margin: 20px auto;
